--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 		<meta name="format-detection" content="telephone=no">
 		<title>NewYearCards</title>
 		<link rel="stylesheet" type="text/css" href="css/pan.css" />
-		<script type="text/jacascript" src="js/script.js"></script>
 	</head>
 	<body>
 		<div class="music">
@@ -38,5 +37,6 @@
 		<audio autoplay="true">
 			<source src="audio/happynewyear.mp3" type="audio/mpeg">
 		</audio>
+		<script type="text/javascript" src="js/script.js"></script>
 	</body>
 </html>
